[zedang] feat: finish html starter code

--- a/index.html
+++ b/index.html
@@ -1,15 +1,118 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Title</title>
-  <link rel="stylesheet" href="./src/style/index.css">
-</head>
-<body>
-  Hello World
-  <script src="src/app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Title</title>
+    <link rel="stylesheet" href="./src/style/index.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>World</li>
+        <li>Technology</li>
+        <li>Design</li>
+        <li>Culture</li>
+        <li>Business</li>
+        <li>Politics</li>
+        <li>Opinion</li>
+        <li>Science</li>
+        <li>Health</li>
+      </ul>
+    </nav>
+
+    <main>
+      <section class="blog-nav">
+        <div>
+          <h2 class="italic">About</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+            repellendus ad officiis dolorum rerum itaque consequuntur eum
+            doloribus. Iste laudantium voluptate inventore nostrum ut quia
+            debitis unde enim porro ab.
+          </p>
+        </div>
+        <div>
+          <h2 class="italic">Archives</h2>
+          <ul>
+            <li><a href="">January 2020</a></li>
+            <li><a href="">December 2019</a></li>
+            <li><a href="">November 2019</a></li>
+            <li><a href="">October 2019</a></li>
+            <li><a href="">September 2019</a></li>
+            <li><a href="">August 2019</a></li>
+            <li><a href="">July 2019</a></li>
+            <li><a href="">June 2019</a></li>
+            <li><a href="">May 2019</a></li>
+            <li><a href="">April 2019</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="articles">
+        <article>
+          <img src="" alt="" class="thumbnail" />
+          <h2>Artible 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            est illo! Alias placeat distinctio unde quibusdam maiores nisi?
+            Autem, placeat aperiam eius sed magnam mollitia a ratione velit
+            nulla ea!
+          </p>
+          <a href="" class="article-detail">View details</a>
+        </article>
+        <article>
+          <img src="" alt="" class="thumbnail" />
+          <h2>Artible 2</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+            saepe facere dignissimos magni deserunt doloremque nesciunt quasi
+            est hic quod! Totam architecto vel ipsum molestias laboriosam?
+            Accusantium illum iusto recusandae libero? Pariatur labore
+            architecto incidunt tempore voluptatibus voluptate nisi natus,
+            dignissimos nobis, vel quaerat odit! Similique iure numquam
+            explicabo quidem, architecto animi impedit dicta earum
+            exercitationem dolorem, reiciendis tenetur doloremque, debitis
+            assumenda quo molestiae. Dicta esse ratione fuga iste. Voluptates
+            expedita, soluta harum inventore assumenda laborum aliquam eligendi
+            neque nesciunt accusantium! Veniam earum nemo quod consequuntur ut.
+            Ipsam eius, officiis eos odio, voluptates, neque reprehenderit eum
+            cum iure tempora placeat!
+          </p>
+          <a href="" class="article-detail">View details</a>
+        </article>
+        <article>
+          <img src="" alt="" class="thumbnail" />
+          <h2>Artible 3</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            est illo! Alias placeat distinctio unde quibusdam maiores nisi?
+            Autem, placeat aperiam eius sed magnam mollitia a ratione velit
+            nulla ea!
+          </p>
+          <a href="" class="article-detail">View details</a>
+        </article>
+      </section>
+      <section class="login">
+        <form action="">
+          <input type="email" name="" id="" placeholder="Email address" />
+          <input type="password" name="" id="" placeholder="Password" />
+          <div>
+            <input type="checkbox" name="" id="" />
+            <span>Remember me</span>
+          </div>
+          <button type="submit">Sign in</button>
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <p>Advanced CSS homework by <a href="#">@Your Name</a></p>
+      <a href="#">Back to top</a>
+    </footer>
+  </body>
 </html>
